--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <audio src="./src/assets/sound.mp3" id="beep"></audio>
   </body>
 </html>
